Add problem to solve section

--- a/Instruction/HGP.dtx
+++ b/Instruction/HGP.dtx
@@ -6,7 +6,7 @@
 % 
 % \begin{abstract}
 % \par 这是华中科技大学的{\bfseries 非官方}本科生毕业论文模板的说明，在该模板中我重新定义各个环境、页眉页脚、参考文献等等，因此可以基本上使用原来\LaTeX 自带的命令就能完美制作出华中科技大学的毕业论文。
-% \par 在本文中我将首先讲述模板基本使用方法，然后讲解重新定义和新定义个各个命令与环境的使用方法，并且我将提供一个简单的使用例子以供参考，最后我会给出我本人在各个系统下测试结果。
+% \par 在本文中我将首先讲述模板基本使用方法，然后讲解重新定义和新定义个各个命令与环境的使用方法，并且我将提供一个简单的使用例子以供参考，最后我会给出我本人在各个系统下测试结果和模板已知暂时未解决的问题。
 % \end{abstract}
 % 
 % \tableofcontents
@@ -274,6 +274,11 @@
 % 
 % \section{模板测试}
 % \par 本模板在Windows 10和Mac OS X中进行了测试，测试环境分别为MiK\TeX 和Mac\TeX 。测试过程中Example文件夹下的样例文档都能够正常编译输出。Ubuntu系统下我安装\TeX~Live过程中有一些问题，不过考虑到Mac\TeX 是\TeX~Live在Mac OS X下的发行版本，理论上应该没有问题。
+% 
+% \section{待解决问题}
+% \subsection{章节标题后使用在此处（h）的图表环境造成后文伪加粗}
+% \par 根据华中科技大学官方毕业论文模板要求，章节标题使用黑体加粗，为了方便加粗效果的实现，本模板使用伪加粗而非独立的粗体黑体字体。但因为CTEX宏包内部设置问题（也许是编译器的问题），如果在章节标题后使用图表环境，且图表位置设置为在此处（h），伪加粗格式会继续保留到本页结束。
+% \par 因为该问题涉及其他宏包，暂未找到比较好的解决办法。建议不要暂时不要在标题后使用在此处（h）的图片。
 % 
 % \section{写在最后}
 % \par \LaTeX 是一个强大的排版工具，本文所述内容只包含了本模板实现的主要功能，其他诸多功能不能尽述，希望使用者，尤其是初学者，能够针对性参考其他文档进行排版。
