--- a/Example/example.tex
+++ b/Example/example.tex
@@ -67,6 +67,10 @@
 	\subsection{第一小节}
 	\subsubsection{第一小小节}
 	\subsubsection{第二小小节}
+	\subsubsubsection{第一小小小节}
+	
+	\verb|\subsubsubsection|是本样式定义的第四级标题，其使用方法与前三级相同。
+	
 	\paragraph{段落}\label{para:para}这是一个带有顶头标签的段落这是一个带有顶头标签的段落这是一个带有顶头标签的段落这是一个带有顶头标签的段落这是一个带有顶头标签的段落这是一个带有顶头标签的段落这是一个带有顶头标签的段落
 	\subparagraph{小段落}只是一个带有缩进标签的段落只是一个带有缩进标签的段落只是一个带有缩进标签的段落只是一个带有缩进标签的段落只是一个带有缩进标签的段落只是一个带有缩进标签的段落只是一个带有缩进标签的段落
 	\subsection{第二小节}
@@ -92,7 +96,7 @@
 	新的大节会自动出现在新的一页上
 	\section{参考文献和交叉引用}\label{sec:ref}
 	\subsection{参考文献}
-	这是一个参考文献引用的范例\cite{Stone_1998}；
+	这是一个参考文献引用的范例\cite{Stone_1998}
 	
 	这样可以添加一个不标注的参考文献引用\nocite{9787508342894}
 	
