--- a/Instruction/HGP.dtx
+++ b/Instruction/HGP.dtx
@@ -157,7 +157,7 @@
 % \par 请注意，在正文中如果单独使用|\bfseries|或者|\itshape|会将字体映射为黑体和楷体，并不会将宋体加粗或者斜体。
 % 
 % \subsection{交叉引用}
-% 本模板重写了章节、段落、公式和图表的\DescribeMacro{\autoref}|\autoref|命令使之格式美观且符合一般引用方法，因此推荐使用该命令对章节、段落、公式和图表进行引用。使用方法：在引用之前需要在对应的位置使用\DescribeMacro{\label}|\label{<引用标签>}|添加一个新的标签，然后使用|\autoref{<引用标签>}|引用该标签所在的章节、段落、公式和图表。
+% 本模板重写了章节、公式和图表的\DescribeMacro{\autoref}|\autoref|命令使之格式美观且符合一般引用方法，因此推荐使用该命令对章节、公式和图表进行引用。使用方法：在引用之前需要在对应的位置使用\DescribeMacro{\label}|\label{<引用标签>}|添加一个新的标签，然后使用|\autoref{<引用标签>}|引用该标签所在的章节、公式和图表。
 % 
 % \subsection{图片环境}
 % \par 本模板保留了原来的图片环境|figure|的同时，添加了一个\DescribeEnv{generalfig}|generalfig|环境，方便添加居中的，带有标题的图片。其使用方法如下：
