Correct several small mistakes

--- a/Example/example.tex
+++ b/Example/example.tex
@@ -137,8 +137,8 @@
 	\end{equation}
 	或者多个带编号的公式
 	\begin{eqnarray}
-	f_1(x)=12x^2+36x+sinx\\
-	f_2(x)=sqrt[3]{x^3+3x}
+	f_1(x)=12x^2+36x+\sin x\\
+	f_2(x)=\sqrt{3}{x^3+3x}
 	\end{eqnarray}
 	以上
 	
