--- a/Instruction/HGP.dtx
+++ b/Instruction/HGP.dtx
@@ -122,7 +122,7 @@
 % \DescribeMacro{subsubsubsection indent}|subsubsubsection indent=7em|表示目录第四级缩进，默认7em。\\
 % \DescribeMacro{paragraph indent}|paragraph indent=11em|表示目录第五级缩进，默认11em。\\
 % \DescribeMacro{subparagraph indent}|subparagraph indent=13em|表示目录第六级缩进，默认13em。\\
-% \DescribeMacro{indent}|indent=normal/noindent/sameforsubandsubsub|用于快速设定缩进，其中|normal|使用默认缩进；|noindent|为三级目录皆无缩进；|sameforsubandsubsub|使第二级之后缩进相同，都为1.5em，此时第一级仍为0em。
+% \DescribeMacro{indent}|indent=normal/noindent/sameforsubandsubsub|用于快速设定缩进，其中|normal|使用默认缩进；|noindent|为各级目录皆无缩进；|sameforsubandsubsub|使第二级之后缩进相同，都为1.5em，此时第一级仍为0em。
 % \par 在之前的版本中，还使用了\DescribeMacro{\maketoc}|\maketoc[<nopagenum/pagenum/pagenumtoc>]|命令，该命令包含一个可选参数，其中：|nopagenum|指目录没有页码（默认值）；|pagenum|指目录有页码；|pagenumtoc|指目录有页码，且目录两字出现在目录中。该命令仍然被支持。
 % \par 请注意本模板不会自动设置页码格式，具体页码设置方法，请参考“{\itshape ~\nameref{subsec:pagenum}}”。
 % 
