Correct colon mistake of caption

--- a/Instruction/HGP.dtx
+++ b/Instruction/HGP.dtx
@@ -15,7 +15,7 @@
 % \par 请注意，本模板需要使用xeCJK宏包，因此只能在\XeLaTeX 下进行编译。
 % \subsection{在Windows系统中}
 % \begin{enumerate}[itemsep=0pt,parsep=0pt]
-% 	\item 下载\footnote{\label{fn:mirror}校园网用户可以前往\href{http://mirror.hust.edu.cn/CTAN/}{华中科技大学开源镜像站}快速下载}并安装最新版本的MiK\TeX 或者\TeX\space Live；
+% 	\item 下载\footnote{\label{fn:mirror}校园网用户可以前往\href{http://mirror.hust.edu.cn/CTAN/}{华中科技大学开源镜像站}快速下载}并安装最新版本的MiK\TeX （推荐）或者\TeX\space Live；
 % 	\item 打开\TeX works，并设置默认编译工具(Edit->Preference->Typesetting->Processing Tools->Default)为\XeLaTeX+MakeIndex+\BibTeX ；
 % 	\item 新建一个tex文档并保存在一个文件夹下，将Template文件夹下所有文件拷贝到该文件夹下
 % 	\item 在新的tex文档中使用|\documentclass{HustGraduPaper}|使用模板定义的样式；
@@ -31,7 +31,7 @@
 % 
 % \subsection{在Ubuntu系统中}
 % \begin{enumerate}[itemsep=0pt,parsep=0pt]
-% 	\item 使用命令|apt-get install texlive|安装最新版\TeX~Live\footnote{校园网用户可以将\href{http://mirrors.hust.edu.cn/help.html\#ubuntu}{华中科技大学开源镜像站}添加到apt-get源中加速下载}；
+% 	\item 使用命令|apt-get install texlive texlive-full|安装最新版\TeX~Live\footnote{校园网用户可以将\href{http://mirrors.hust.edu.cn/help.html\#ubuntu}{华中科技大学开源镜像站}添加到apt-get源中加速下载}；
 % 	\item 新建一个.tex文件并保存在一个文件夹下，将Template文件夹下所有文件拷贝到该文件夹下；
 % 	\item 在新的tex文档中使用|\documentclass[ubuntufont]{HustGraduPaper}|使用模板定义的样式，并设置使用Ubuntu自带的文泉驿和文鼎字体；
 % 	\item 编写完成论文后，使用\XeLaTeX ->MakeIndex->\BibTeX ->\XeLaTeX 的顺序进行编译；
