Add more instruction for Ubuntu

--- a/Instruction/HGP.dtx
+++ b/Instruction/HGP.dtx
@@ -35,7 +35,7 @@
 % 	\item 新建一个.tex文件并保存在一个文件夹下，将Template文件夹下所有文件拷贝到该文件夹下；
 % 	\item 在新的tex文档中使用|\documentclass[ubuntufont]{HustGraduPaper}|使用模板定义的样式，并设置使用Ubuntu自带的文泉驿和文鼎字体；
 % 	\item 编写完成论文后，使用\XeLaTeX ->MakeIndex->\BibTeX ->\XeLaTeX 的顺序进行编译；
-% \footnote{如果您是使用的Ubuntu系统，我相信您比我更了解怎么在这个系统下编译\LaTeX}
+% \footnote{Ubuntu系统中中文字体问题比较复杂，请参考其他文章进行编译字体设置}
 % \end{enumerate}
 % 
 % \section{样式选项}
