--- a/Example/example.tex
+++ b/Example/example.tex
@@ -122,7 +122,7 @@
 	\begin{equation}
 	\sin^2{\theta}+\cos^2{\theta}=1 \label{eq:pingfanghe}
 	\end{equation}
-	还可以通过添加标签在正文中引用公式，如等式~\eqref{eq:pingfanghe}~或者\autoref{eq:pingfanghe}。我们还可以轻松打出一个矩阵
+	还可以通过添加标签在正文中引用公式，如式~\eqref{eq:pingfanghe}~或者\autoref{eq:pingfanghe}。我们还可以轻松打出一个矩阵
 	\begin{equation}
 	\bm{A}=\begin{bmatrix}
 	1&2&3&4\\
