--- a/Instruction/HGP.dtx
+++ b/Instruction/HGP.dtx
@@ -6,7 +6,7 @@
 % 
 % \begin{abstract}
 % \par 这是华中科技大学的{\bfseries 非官方}本科生毕业论文模板的说明，在该模板中我重新定义各个环境、页眉页脚、参考文献等等，因此可以基本上使用原来\LaTeX 自带的命令就能完美制作出华中科技大学的毕业论文。
-% \par 在本文中我将首先讲述模板基本使用方法，然后讲解重新定义和新定义个各个命令与环境的使用方法，并且我将提供一个简单的使用例子以供参考，最后我会给出我本人在各个系统下测试结果和模板已知暂时未解决的问题。
+% \par 在本文中我将首先讲述模板基本使用方法，然后讲解重新定义和新定义个各个命令与环境的使用方法，并且我将提供一个简单的使用例子以供参考，最后我会给出我本人在各个系统下测试结果和模板已知暂时未解决的问题，以及查重个人的建议。
 % \end{abstract}
 % 
 % \tableofcontents
@@ -285,6 +285,14 @@
 % \subsection{章节标题后使用在此处（h）的图表环境造成后文伪加粗}
 % \par 根据华中科技大学官方毕业论文模板要求，章节标题使用黑体加粗，为了方便加粗效果的实现，本模板使用伪加粗而非独立的粗体黑体字体。但因为CTEX宏包内部设置问题（也许是编译器的问题），如果在章节标题后使用图表环境，且图表位置设置为在此处（h），伪加粗格式会继续保留到本页结束。
 % \par 因为该问题涉及其他宏包，暂未找到比较好的解决办法。建议不要暂时不要在标题后使用在此处（h）的图片。
+% 
+% \section{关于查重}
+% \par 据我目前了解到的情况我们学校使用的是知网查重，硕博论文提交窗口要求的提交的格式也是PDF。本科论文似乎是通过各院系教务科统一提交，通常是提交PDF文档，部分院系可能要求提交WORD文档，对于这个问题，我目前找到两种解决方案：
+% \begin{enumerate}
+%	\item 通过Adobe Acrobat导出到Microsoft Word，这是我目前找到的唯一一个可以比较完美识别PDF格式并转换为WORD格式的工具，导出格式中的公式图片可能存在问题，但是查重不查公式图片，所以问题不大，但缺点是这个工具是收费的；
+% 	\item 通过Pandoc\footnote{官网链接：\url{http://pandoc.org/}}直接从\LaTeX 转换为Microsoft Word\footnote{转换命令：pandoc TeXfile.tex --toc --output WORDfile.docx}，这需要一个已经设置好各级标题样式的WORD文档作为格式参考，好处是转换结果中公式都能完整展现，坏处是需要已经设定好格式的WORD文档而且直接生成PDF脚本的命令（如各种绘图宏包）不能正常工作。
+% \end{enumerate}
+% \par 个人认为提交的WORD文档仅作为查重使用，并不需要格式完全准确，所以虽然转换得到的WORD存在各种问题，但并不会有太大影响。当然，如果对最终提交的WORD格式有近乎完美的追求，建议使用WORD直接进行论文排版。关于这个问题如果您有更好的建议也请\href{mailto:me@stringblog.com}{联系我}。
 % 
 % \section{写在最后}
 % \par \LaTeX 是一个强大的排版工具，本文所述内容只包含了本模板实现的主要功能，其他诸多功能不能尽述，希望使用者，尤其是初学者，能够针对性参考其他文档进行排版。
