Add font option for personal information in title

--- a/Example/example.tex
+++ b/Example/example.tex
@@ -16,7 +16,8 @@
 	%生成标题页 \maketitle[可选参数]
 	%可选参数：
 	%logo color=green/black 华中科技大学字样的颜色，绿色或者黑色，默认绿色
-	%line lenght=12em 填写信息处横线的长度，默认12em
+	%line length=12em 填写信息处横线的长度，默认12em
+	%line font=huawenzhongsong 填写信息的字体，默认huawenzhongsong
 	\maketitle
 	
 	%生成声明与授权书页 \statement[可选参数]
