--- a/Instruction/HGP.dtx
+++ b/Instruction/HGP.dtx
@@ -87,7 +87,8 @@
 % \par\noindent\DescribeMacro{\instructor} 存储论文作者导师姓名。
 % \\\par\DescribeMacro{\maketitle} 之后，在正文中使用命令|\maketitle[<可选参数>]|生成标题页面。 标题页面可以添加两个可选参数，可选参数间使用英文逗号分割，可选参数分别是：
 % \DescribeMacro{logo color} |logo color=green/black|表示的是华中科技大学字样的颜色，默认是绿色；
-% \DescribeMacro{line length} |line length=12em|表示的是填写信息位置（即填写姓名、班级、学号等的位置）的横线长度，默认是12em。
+% \DescribeMacro{line length} |line length=12em|表示的是填写信息位置（即填写姓名、班级、学号等的位置）的横线长度，默认是12em;
+% \DescribeMacro{line font} |line font=<字体拼音>|表示的是填写的信息（即姓名、班级、学号等）的字体，选项包括华文中宋（huawenzhongsong）、宋体（songti）、黑体（heiti）、仿宋（fangsong）、楷书（kaishu）、隶书（lishu）和幼圆（youyuan），默认是华文中宋，请注意仿宋在Ubuntu字体中没有定义，隶书和幼圆只有Windows字体和方正字体中有定义\cite[\S 4.3]{ctexdoc}。
 % \par 在之前的版本中，本模板还使用了另一个版本的|\maketitle[<横线长度>]|命令。该命令包含一个可选参数，用于设置填写信息位置（即填写姓名、班级、学号等的位置）的横线长度，默认是12em。该命令仍然被支持。
 % 
 % \subsection{声明与授权页}
@@ -141,7 +142,7 @@
 % \subsection{参考文献}
 % \par 本模板参考文献采用\BibTeX 生成，因此需要制作独立的Bib文件。“*.bib”是一种数据库文件，其中包含了参考文献的基本信息，如此即可直接通过编译生成参考文件文字，避免了手打参考文献的繁琐过程。
 % \par 本模板为了使用了南京大学胡海星的《符合国家标准《GB/T 7714-2005 文后参考文献著录规则》的BibTeX样式文件》，虽然官方模板给出的样式与国标并不完全一致，但两者样式基本相同，故采用该样式，其bib文件具体标签说明请参照他写的\href{https://raw.github.com/Haixing-Hu/nju-thesis/master/manual/njuthesis-manual.pdf}{使用手册}\cite{nanda}，考虑其内容较多，不在此列举。
-% \par 文献数据库可以手工逐条录入，也可以从互联网上直接下载现成的文献数据库，很多电子期刊数据库网站会提供相应的\BibTeX 数据库文件或者\BibTeX 条目导出，Google\textsuperscript{\textregistered}  Scholar也免费提供此服务。\cite[\S 3.3]{9787121202087}这对于英文文献十分有效，部分中文期刊也有这样的服务。
+% \par 文献数据库可以手工逐条录入，也可以从互联网上直接下载现成的文献数据库，很多电子期刊数据库网站会提供相应的\BibTeX 数据库文件或者\BibTeX 条目导出，\href{https://scholar.google.com/}{Google\textsuperscript{\textregistered}  Scholar}和\href{https://xueshu.baidu.com/}{百度\textsuperscript{\textregistered}学术}也免费提供此服务。\cite[\S 3.3]{9787121202087}这对于中英文文献都十分有效。
 % \par 如果希望手工录入，推荐安装JabRef管理参考文献，该系统可以直接搜索论文的DOI编号、书目的ISBN编号，甚至论文的名称，从而直接获得其相关信息，极大地方便了参考文献的录入。
 % \par 若要在本模板中使用参考文献，请这样使用：首先在文章末尾参考文献的地方使用\DescribeMacro{\bibliography}|\bibliography{<bib文件名>}|，Bib文件名中不需要加扩展名。之后可以通过命令\DescribeMacro{\cite}|\cite{<bib id>}|引用一个参考文献，被引用的参考文献会自动出现在文章末尾的参考文献中。也可以使用命令\DescribeMacro{\nocite}|\nocite{<bib id>}|隐式引用一个参考文献，这样引用不会在文中标出参考文献号。当然如果你使用的是自己录入的Bib文件，你也可以通过命令|\nocite{*}|直接将所有Bib文件中的参考文献列出。
 % 
@@ -279,7 +280,7 @@
 %    \end{macrocode}
 % 
 % \section{模板测试}
-% \par 本模板在Windows 10和Mac OS X中进行了测试，测试环境分别为MiK\TeX 和Mac\TeX 。测试过程中Example文件夹下的样例文档都能够正常编译输出。Ubuntu系统下我安装\TeX~Live过程中有一些问题，不过考虑到Mac\TeX 是\TeX~Live在Mac OS X下的发行版本，理论上应该没有问题。
+% \par 本模板在Windows 10和Mac OS X中进行了测试，测试环境分别为MiK\TeX 和Mac\TeX 。测试过程中Example文件夹下的样例文档都能够正常编译输出。Ubuntu系统下字体问题比较麻烦，我并未完成测试，不过考虑到Mac\TeX 是\TeX~Live在Mac OS X下的发行版本，理论上应该没有问题。
 % 
 % \section{待解决问题}
 % \subsection{章节标题后使用在此处（h）的图表环境造成后文伪加粗}
