--- a/Release/Example/example.tex
+++ b/Release/Example/example.tex
@@ -16,7 +16,8 @@
 	%生成标题页 \maketitle[可选参数]
 	%可选参数：
 	%logo color=green/black 华中科技大学字样的颜色，绿色或者黑色，默认绿色
-	%line lenght=12em 填写信息处横线的长度，默认12em
+	%line length=12em 填写信息处横线的长度，默认12em
+	%line font=huawenzhongsong 填写信息的字体，默认huawenzhongsong
 	\maketitle
 	
 	%生成声明与授权书页 \statement[可选参数]
@@ -122,7 +123,7 @@
 	\begin{equation}
 	\sin^2{\theta}+\cos^2{\theta}=1 \label{eq:pingfanghe}
 	\end{equation}
-	还可以通过添加标签在正文中引用公式，如等式~\eqref{eq:pingfanghe}~或者\autoref{eq:pingfanghe}。我们还可以轻松打出一个矩阵
+	还可以通过添加标签在正文中引用公式，如式~\eqref{eq:pingfanghe}~或者\autoref{eq:pingfanghe}。我们还可以轻松打出一个矩阵
 	\begin{equation}
 	\bm{A}=\begin{bmatrix}
 	1&2&3&4\\
