--- a/Release/Template/HustGraduPaper.cls
+++ b/Release/Template/HustGraduPaper.cls
@@ -620,8 +620,9 @@
 %	---	重新定义参考文献页
 %
 %设置参考文献
-%\RequirePackage[numbers]{natbib}
-\bibliographystyle{gbt7714-2005}
+\RequirePackage[numbers,square,comma,super,sort&compress]{natbib}
+\bibliographystyle{thuthesis}
+\def\thudot{\unskip.}
 \ctexset{bibname={参考文献}}
 
 %设置新的附录命令
