--- a/Example/example.tex
+++ b/Example/example.tex
@@ -1,4 +1,4 @@
-\documentclass[supercite]{HustGraduPaper}
+\documentclass[supercite,gbtcite]{HustGraduPaper}
 %进行个人信息设置
 \title{论文题目} %论文题目
 \author{作者姓名} %作者姓名
@@ -103,7 +103,7 @@
 	新的大节会自动出现在新的一页上
 	\section{参考文献和交叉引用}\label{sec:ref}
 	\subsection{参考文献}
-	这是一个参考文献引用的范例\cite{Stone_1998}
+	这是一个参考文献引用的范例\cite{Stone_1998}，你可以随时使用两种不同的样式\normalcite{Stone_1998}或者\supercite{Stone_1998}
 	
 	这样可以添加一个不标注的参考文献引用\nocite{9787508342894}
 	
