--- a/Example/example.tex
+++ b/Example/example.tex
@@ -1,4 +1,4 @@
-\documentclass[supercite,gbtcite]{HustGraduPaper}
+\documentclass[supercite]{HustGraduPaper}
 %进行个人信息设置
 \title{论文题目} %论文题目
 \author{作者姓名} %作者姓名
